[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustpluspushreceiver"
version = "0.6.2"
description = "Subscribe to GCM/FCM and receive notifications"
readme = "README.rst"
requires-python = ">=2.7"
license = {text = "Unlicense"}
authors = [
    {name = "Franc[e]sco & olijeffers0n"}
]
keywords = ["fcm", "gcm", "push", "notification", "firebase", "google"]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "oscrypto",
    "protobuf",
    "cryptography",
    "betterproto",
    "requests"
]

[project.urls]
Homepage = "https://github.com/olijeffers0n/push_receiver"

[project.optional-dependencies]
example = ["appdirs"]

[tool.setuptools]
packages = ["push_receiver"]
